plugins/kotlin/idea/tests/testData/highlighterMetaInfo/dsl/RegularDsl.kt.highlighting
<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>@DslMarker<!>
<!HIGHLIGHTING("textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>annotation<!> class <!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>Dsl1<!>

<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>@Dsl1<!>
class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>ForDsl<!>

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>foo<!>(<!HIGHLIGHTING("textAttributesKey='KOTLIN_PARAMETER'")!>f<!>: <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>ForDsl<!>.() -> <!HIGHLIGHTING("textAttributesKey='KOTLIN_OBJECT'")!>Unit<!>) {}

fun <!HIGHLIGHTING("textAttributesKey='KOTLIN_FUNCTION_DECLARATION'")!>test<!>() {
    <!HIGHLIGHTING("textAttributesKey='KOTLIN_PACKAGE_FUNCTION_CALL'")!>foo<!> {

    }
}
